--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
    "editor.codeActionsOnSave": {
        "source.fixAll.eslint": true
    },
-   "editor.tabSize": 2
+   "editor.tabSize": 2,
+   "python.pythonPath": "api/.venv/bin/python3"
 }
