--- a/api/Pipfile
+++ b/api/Pipfile
@@ -8,6 +8,8 @@ flask = "==1.1.2"
 jinja2 = "<3.1.0"
 itsdangerous = "==2.0.1"
 werkzeug = "==2.0.3"
+requests = "==2.25.1"
+python-dotenv = "==0.15.0"
 
 [dev-packages]
 
