--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,6 +10,7 @@ itsdangerous = "==2.0.1"
 werkzeug = "==2.0.3"
 requests = "==2.25.1"
 python-dotenv = "==0.15.0"
+flask-cors = "==3.0.10"
 
 [dev-packages]
 
