--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-   "eslint.validate": [
+    "editor.tabSize": 2,
+    "eslint.validate": [
        "html",
        "javascript",
        "javascriptreact"
@@ -7,6 +8,19 @@
    "editor.codeActionsOnSave": {
        "source.fixAll.eslint": true
    },
-   "editor.tabSize": 2,
-   "python.pythonPath": "api/.venv/bin/python3"
+   "python.pythonPath": "api/.venv/bin/python3",
+   "python.linting.pycodestyleEnabled": true,
+   "python.linting.pycodestyleArgs":[
+       "--max-line-length==88"
+   ],
+   "python.linting.pylintEnabled": true,
+   "python.linting.pylintArgs": [
+       "--disable=missing-module-docstring",
+       "--disable=missing-function-docstring",
+       "--disable=missing-class-docstring"
+   ],
+   "python.formatting.provider": "black",
+   "[python]": {
+       "editor.formatOnSave": true
+}
 }
