--- a/api/Pipfile
+++ b/api/Pipfile
@@ -13,6 +13,9 @@ python-dotenv = "==0.15.0"
 flask-cors = "==3.0.10"
 
 [dev-packages]
+pylint = "==2.7.2"
+pycodestyle = "==2.6.0"
+black = "==22.3.0"
 
 [requires]
 python_version = "3.9"
