--- a/api/Pipfile
+++ b/api/Pipfile
@@ -11,6 +11,7 @@ werkzeug = "==2.0.3"
 requests = "==2.25.1"
 python-dotenv = "==0.15.0"
 flask-cors = "==3.0.10"
+pymongo = "==3.11.3"
 
 [dev-packages]
 pylint = "==2.7.2"
